@@ -1,5 +1,4 @@
 include('shared.lua')
-include("cl_init.lua")
 
 SWEP.PrintName = "Player posessor"
 SWEP.Slot = 5
