@@ -12,6 +12,7 @@ SVN version
 [FIX] People being able to spawn inside each other
 [FIX] rp_max<custom team> erroring sometimes and breaking the whole fucking gamemode
 [FIX] rp_grant breaking when the console enters it
+[FIX] Stupid and retarded error in the player possessor :downs:
 [CHANGE] /buypistol to /buy because of the custom items
 [CHANGE] Made admins.lua a bit more idiot proof
 [CHANGE] Cooks can now buy food too when hungermod is off
